@@ -1,5 +1,4 @@
 import de.undercouch.gradle.tasks.download.Download
-import org.gradle.internal.jvm.Jvm
 
 plugins {
     // https://plugins.gradle.org/plugin/com.github.johnrengelman.shadow (v5 requires Gradle 5)
@@ -7,8 +6,8 @@ plugins {
     // https://plugins.gradle.org/plugin/de.undercouch.download
     id "de.undercouch.download" version "4.0.0"
     id 'java'
-    // TODO: Migrate to newer version: https://github.com/tbroyer/gradle-errorprone-plugin#migration-from-versions-00x
-    id "net.ltgt.errorprone-base" version "0.0.13"
+    // https://github.com/tbroyer/gradle-errorprone-plugin
+    id "net.ltgt.errorprone" version "1.1.1"
     // https://plugins.gradle.org/plugin/org.ajoberstar.grgit
     id 'org.ajoberstar.grgit' version '3.1.1' apply false
 }
@@ -23,13 +22,18 @@ repositories {
 
 ext {
     release = false
-    assert JavaVersion.current() == JavaVersion.VERSION_1_8: "Set JAVA_HOME to JDK 8. Current version is ${JavaVersion.current()}"
+
+    // On a Java 8 JVM, use error-prone javac and source/target 8.
+    // On a Java 9+ JVM, use the host javac, default source/target, and required module flags.
+    isJava8 = JavaVersion.current() == JavaVersion.VERSION_1_8
+
+    errorproneJavacVersion = '9+181-r4173-1'
 
     parentDir = file("${rootDir}/../").absolutePath
 
     annotationTools = "${parentDir}/annotation-tools"
     afu = "${annotationTools}/annotation-file-utilities"
-    afuJar = "${afu}/annotation-file-utilities-all.jar"
+    afuJar = "${afu}/annotation-file-utilities-all-but-javac.jar"
 
     stubparser = "${parentDir}/stubparser"
     stubparserJar = "${stubparser}/javaparser-core/target/stubparser.jar"
@@ -65,14 +69,14 @@ allprojects {
     apply plugin: 'java'
     apply plugin: 'com.github.johnrengelman.shadow'
     apply plugin: "de.undercouch.download"
-    apply plugin: 'net.ltgt.errorprone-base'
+    apply plugin: 'net.ltgt.errorprone'
 
     group 'org.checkerframework'
     // Increment the minor version rather than just the patch level if:
     //   * any new checkers have been added,
     //   * the patch level is 9 (keep the patch level as a single digit), or
     //   * backward-incompatible changes have been made to APIs or elsewhere.
-    version '2.10.0'
+    version '3.0.0'
 
     repositories {
         mavenCentral()
@@ -80,13 +84,14 @@ allprojects {
 
     configurations {
         javacJar
-        toolsJar
     }
 
     dependencies {
-        javacJar 'org.checkerframework:compiler:2.4.0'
-        // Change the JDK via -Dorg.gradle.java.home=JDK_PATH
-        toolsJar files(Jvm.current().toolsJar)
+        if (isJava8) {
+            javacJar group: 'com.google.errorprone', name: 'javac', version: "$errorproneJavacVersion"
+        }
+
+        errorproneJavac("com.google.errorprone:javac:$errorproneJavacVersion")
     }
 
     // After all the tasks have been created, modify some of them.
@@ -95,33 +100,72 @@ allprojects {
         // any module to reference classes in any other module.
         // Also, build and use ManualTaglet as a taglet.
         tasks.withType(Javadoc) {
+            def tagletVersion = isJava8 ? 'taglet' : 'tagletJdk11'
+
             dependsOn(':checker:shadowJar')
-            dependsOn(':framework-test:tagletClasses')
+            dependsOn(":framework-test:${tagletVersion}Classes")
             doFirst {
                 options.encoding = 'UTF-8'
                 options.memberLevel = javadocMemberLevel
                 classpath += files(project(':checker').tasks.getByName('shadowJar').archivePath)
+                if (isJava8) {
+                    classpath += configurations.javacJar
+                }
                 options.taglets 'org.checkerframework.taglet.ManualTaglet'
-                options.tagletPath(project(':framework-test').sourceSets.taglet.output.classesDirs.getFiles() as File[])
-                options.links = ['https://docs.oracle.com/javase/8/docs/api/', 'https://docs.oracle.com/javase/8/docs/jdk/api/javac/tree/']
+                options.tagletPath(project(':framework-test').sourceSets."${tagletVersion}".output.classesDirs.getFiles() as File[])
+                // TODO: this doesn't work with JDK 11
+                options.links = isJava8 ? ['https://docs.oracle.com/javase/8/docs/api/', 'https://docs.oracle.com/javase/8/docs/jdk/api/javac/tree/'] : []
                 // This file is looked for by Javadoc.
                 file("${destinationDir}/resources/fonts/").mkdirs()
                 ant.touch(file: "${destinationDir}/resources/fonts/dejavu.css")
+                options.addStringOption('source', '8')
+                if (JavaVersion.current().isJava8Compatible()) {
+                    options.addStringOption('Xwerror', '-quiet')
+               }
             }
         }
 
-	/// TODO: This should be enabled selectively, but not everywhere yet because it would require
-	/// exhaustive @param Javadoc tags throughout.  (Fails on Travis, cannot reproduce locally.)
-	// // Turn Javadoc warnings into errors.
-	// tasks.withType(Javadoc) {
-	//     options.addStringOption('Xwerror', '-quiet')
-	// }
+        /// TODO: One day we can enable this.  For now, CI jobs require Javadoc on changed lines.
+        // // Turn Javadoc warnings into errors.
+        // tasks.withType(Javadoc) {
+        //     options.addStringOption('Xwerror', '-quiet')
+        // }
 
         // Add standard javac options
         tasks.withType(JavaCompile) {
             dependsOn(':installGitHooks')
-            sourceCompatibility = 1.8
-            targetCompatibility = 1.8
+            sourceCompatibility = 8
+            targetCompatibility = 8
+            // Because the target is 8, all of the public compiler classes are accessible, so
+            // --add-exports are not required, (nor are they allowed with target 8). See
+            // https://openjdk.java.net/jeps/247 for details on compiling for older versions.
+
+            // When sourceCompatibilty is changed to 11, then the following will be required.
+            // options.compilerArgs += [
+            // "--add-exports", "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
+            // "--add-exports", "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
+            // "--add-exports", "jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
+            // "--add-exports", "jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
+            // "--add-exports", "jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
+            // "--add-exports", "jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
+            // "--add-exports", "jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
+            // "--add-exports", "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
+            // "--add-exports", "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
+            // ]
+            // This is equivalent to writing "exports jdk.compiler/... to ALL-UNNAMED" in the
+            // module-info.java of jdk.compiler, so corresponding --add-opens are only required for
+            // reflective access to private members.
+            //
+            // From https://openjdk.java.net/jeps/261, Section titled: "Breaking encapsulation"
+            // "The effect of each instance [of --add-exports] is to add a qualified export of the
+            // named package from the source module to the target module. This is, essentially, a
+            // command-line form of an exports clause in a module declaration[...].
+            // [...]
+            // The --add-exports option enables access to the public types of a specified package.
+            // It is sometimes necessary to go further and enable access to all non-public elements
+            // via the setAccessible method of the core reflection API. The --add-opens option can
+            // be used, at run time, to do this."
+
             options.failOnError = true
             options.deprecation = true
             options.compilerArgs += [
@@ -131,7 +175,14 @@ allprojects {
                     "-Xlint:-options",
                     "-Xlint",
             ]
+
             options.encoding = 'UTF-8'
+            options.fork = true
+            if (isJava8) {
+                options.forkOptions.jvmArgs += ["-Xbootclasspath/p:${configurations.javacJar.asPath}"]
+            }
+            // Don't use error-prone by default
+            options.errorprone.enabled = false
         }
     }
 }
@@ -172,10 +223,19 @@ def createCheckTypeTask(projectName, checker, shortName) {
                 '-processor', "${checker}",
                 '-proc:only',
                 '-Xlint:-processing',
-                "-Xbootclasspath/p:${rootDir}/checker/dist/jdk8.jar"
-        ]
+                ]
+        if (isJava8) {
+            options.compilerArgs += [
+                "-Xbootclasspath/p:${rootDir}/checker/dist/jdk8.jar",
+                "-source",
+                "8",
+                "-target",
+                "8"
+                ]
+        }
     }
 }
+
 /**
  * Returns a list of all the Java files that should be formatted for the given project. These are:
  *
@@ -232,12 +292,14 @@ task htmlValidate(type: Exec, group: 'Format') {
 task allJavadoc(type: Javadoc, group: "Documentation") {
     description = 'Generates a global API documentation for all the modules'
     dependsOn(':checker:shadowJar')
-    dependsOn(':framework-test:tagletClasses')
     destinationDir = file("${rootDir}/docs/api")
     source(project(':checker').sourceSets.main.allJava, project(':framework').sourceSets.main.allJava,
             project(':dataflow').sourceSets.main.allJava, project(':javacutil').sourceSets.main.allJava)
 
     classpath = files(subprojects.collect { it.sourceSets.main.compileClasspath })
+    if (isJava8) {
+        classpath += configurations.javacJar
+    }
     doLast {
         copy {
             from 'docs/logo/Checkmark/CFCheckmark_favicon.png'
@@ -381,10 +443,10 @@ subprojects {
 
     dependencies {
         // https://mvnrepository.com/artifact/com.google.errorprone/error_prone_core
-	// If you update this:
-	//  * Temporarily comment out "-Werror" elsewhere in this file
-	//  * Repeatedly run `./gradlew clean runErrorProne` and fix all errors
-	//  * Uncomment "-Werror"
+        // If you update this:
+        //  * Temporarily comment out "-Werror" elsewhere in this file
+        //  * Repeatedly run `./gradlew clean runErrorProne` and fix all errors
+        //  * Uncomment "-Werror"
         errorprone group: 'com.google.errorprone', name: 'error_prone_core', version: '2.3.3'
     }
 
@@ -436,6 +498,7 @@ subprojects {
         relocate 'org.apache', 'org.checkerframework.org.apache'
         relocate 'org.relaxng', 'org.checkerframework.org.relaxng'
         relocate 'org.plumelib', 'org.checkerframework.org.plumelib'
+        relocate 'org.codehaus', 'org.checkerframework.org.codehaus'
         // relocate 'sun', 'org.checkerframework.sun'
         relocate 'org.objectweb.asm', 'org.checkerframework.org.objectweb.asm'
         relocate 'com.google', 'org.checkerframework.com.google'
@@ -471,11 +534,25 @@ subprojects {
         // Adds manifest to all Jar files
         tasks.withType(Jar) {
             includeEmptyDirs = false
+            if (archiveFileName.get().startsWith("checker-qual")) {
+                metaInf {
+                    from './LICENSE.txt'
+                }
+            } else {
+                metaInf {
+                    from "${rootDir}/LICENSE.txt"
+                }
+            }
             manifest {
                 attributes("Implementation-Version": "${version}")
                 attributes("Implementation-URL": "https://checkerframework.org")
-		if (archiveFileName != "checker-source.jar") {
+                if (! archiveFileName.get().endsWith("source.jar")) {
                     attributes('Automatic-Module-Name': "org.checkerframework." + project.name.replaceAll('-', '.'))
+                }
+                if (archiveFileName.get().startsWith("checker-qual")) {
+                    attributes("Bundle-License": "MIT")
+                } else {
+                    attributes("Bundle-License": "(GPL-2.0-only WITH Classpath-exception-2.0)")
                 }
             }
         }
@@ -506,15 +583,40 @@ subprojects {
                                 "-verbose:summary",
                                 "-javacoptions:-g",
                                 "-keywords:!ignore",
-                                '-samevm',
+                                "-samevm",
+                                "-javacoptions:-classpath ${tasks.shadowJar.archiveFile.get()}:${sourceSets.test.output.asPath}",
                                 // Required for checker/jtreg/nullness/PersistUtil.java and other tests
-                                "-vmoptions:-Xbootclasspath/p:${configurations.javacJar.asPath}:" +
-                                        "${tasks.shadowJar.archiveFile.get()}:${sourceSets.test.output.asPath}",
-                                "-javacoptions:-Xbootclasspath/p:${configurations.javacJar.asPath}",
+                                "-vmoptions:-classpath ${tasks.shadowJar.archiveFile.get()}:${sourceSets.test.output.asPath}",
                         ]
-                        if (project.name.is('checker')) {
+                        if (isJava8) {
+                            // Use Error Prone javac and source/target 8
                             args += [
-                                    "-javacoptions:-Xbootclasspath/p:${projectDir}/dist/jdk8.jar",
+                                "-vmoptions:-Xbootclasspath/p:${configurations.javacJar.asPath}",
+                                "-javacoptions:-Xbootclasspath/p:${configurations.javacJar.asPath}",
+                                "-javacoptions:-source 8",
+                                "-javacoptions:-target 8"
+                                ]
+                            if (project.name.is('checker')) {
+                                args += [
+                                        "-javacoptions:-Xbootclasspath/p:${projectDir}/dist/jdk8.jar",
+                                ]
+                            }
+                        } else {
+                            args += [
+                                    // checker/jtreg/nullness/defaultsPersist/ReferenceInfoUtil.java
+                                    // uses the jdk.jdeps module.
+                                    "-javacoptions:--add-modules jdk.jdeps",
+                                    "-javacoptions:--add-exports=jdk.jdeps/com.sun.tools.classfile=ALL-UNNAMED",
+                            ]
+                        }
+                        if (project.name.is('framework')) {
+                            // Do not check for the annotated JDK
+                            args += [
+                                    "-javacoptions:-Anocheckjdk"
+                            ]
+                        } else if (project.name.is('checker')) {
+                            args += [
+                                    "-javacoptions:-classpath ${sourceSets.testannotations.output.asPath}",
                             ]
                         }
 
@@ -536,6 +638,17 @@ subprojects {
 
         // Configure JUnit tests
         tasks.withType(Test) {
+            if (isJava8) {
+                jvmArgs "-Xbootclasspath/p:${configurations.javacJar.asPath}"
+            } else {
+                // Without this, the test throw "java.lang.OutOfMemoryError: Java heap space"
+                forkEvery(1)
+                jvmArgs += [
+                        "--illegal-access=warn",
+                        "--add-opens", "jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
+                ]
+            }
+
             if (project.name.is('checker')) {
                 dependsOn('copyJarsToDist')
                 systemProperties += [JDK_JAR: "${projectDir}/dist/jdk8.jar"]
@@ -574,12 +687,17 @@ subprojects {
         // Create a runErrorProne task.
         tasks.create(name: 'runErrorProne', type: JavaCompile, group: 'Verification') {
             description 'Run the error-prone compiler on the main sources'
-            toolChain net.ltgt.gradle.errorprone.ErrorProneToolChain.create(project)
+
             source = sourceSets.main.java.asFileTree
             classpath = sourceSets.main.compileClasspath.asFileTree
             destinationDir = new File("${buildDir}", 'errorprone')
 
-            options.compilerArgs = [
+            // Error Prone must be available in the annotation processor path
+            options.annotationProcessorPath = configurations.errorprone
+            // Enable Error Prone
+            options.errorprone.enabled = true
+            options.errorprone.disableWarningsInGeneratedCode = true
+            options.errorprone.errorproneArgs = [
                     // Many compiler classes are interned.
                     '-Xep:ReferenceEquality:OFF',
                     // These might be worth fixing.
@@ -588,17 +706,17 @@ subprojects {
                     '-Xep:StringSplitter:OFF',
                     // Too broad, rejects seemingly-correct code.
                     '-Xep:EqualsGetClass:OFF',
-		    // Not a real problem
-		    '-Xep:MixedMutabilityReturnType:OFF',
-		    // -Werror halts the build if Error Prone issues a warning, which ensures that
-		    // the errors get fixed.  On the downside, Error Prone (or maybe the compiler?)
-		    // stops as soon as it one warning, rather than outputting them all.
-		    // https://github.com/google/error-prone/issues/436
- 		    '-Werror',
+                    // Not a real problem
+                    '-Xep:MixedMutabilityReturnType:OFF',
+                    // -Werror halts the build if Error Prone issues a warning, which ensures that
+                    // the errors get fixed.  On the downside, Error Prone (or maybe the compiler?)
+                    // stops as soon as it one warning, rather than outputting them all.
+                    // https://github.com/google/error-prone/issues/436
+                    '-Werror',
             ]
         }
 
-        // Create an allTests task
+        // Create an allTests task per project
         tasks.create(name: 'allTests', type: GradleBuild, group: 'Verification') {
             description 'Run all Checker Framework tests'
             tasks = ['test', 'checkPurity']
@@ -730,8 +848,8 @@ task releaseBuild(type: GradleBuild) {
     description 'Build everything required for a release'
     startParameter = new StartParameter()
     startParameter.setProjectProperties(release: true)
-    // This downloads rather than builds the jdk8.jar because that's what is used in all the Travis tests.
-    tasks = ['clean', 'assemble', 'sourcesJar', 'javadocJar', 'allJavadoc', 'checker:allJavadocJar']
+    // This downloads rather than builds the jdk8.jar because that's what is used in the CI tests.
+    tasks = ['clean', 'assemble', 'sourcesJar', 'javadocJar', 'allJavadoc', 'framework:allJavadocJar', 'framework:allSourcesJar', 'checker:allJavadocJar', 'checker:allSourcesJar']
 }
 
 task releaseAndTest(type: GradleBuild, dependsOn: 'releaseBuild') {
